# qdevelop

./: CMakeLists.txt  README.md
src/: InitCompletion.cpp  newprojectimpl.cpp
src/QIComplete/: parse.cpp  tree.cpp
